Add nav menu options

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="navigation">
+        <nav class="buttons">
+            <button id="home" class="navButton">Home</button>
+            <button id="menu" class="navButton">Menu</button>
+            <button id="contact" class="navButton">Contact</button>
+        </nav>
+    </header>
+    <div id="content">
+        
+    </div>
 </body>
 </html>
